traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: not found: value H
  H=getMondeHauteur()
  ^TraversalByColumn:2: error: not found: value L
  L=getMondeLargeur()
  ^TraversalByColumn:4: error: not found: value H
    if (getY()+1==H){
                  ^TraversalByColumn:15: error: not found: value H
  H=getMondeHauteur()
  ^TraversalByColumn:16: error: not found: value L
  L=getMondeLargeur()
  ^TraversalByColumn:17: error: not found: value L
  if (getX()+1==L && getY()+1==H){
                ^TraversalByColumn:17: error: not found: value H
  if (getX()+1==L && getY()+1==H){
                               ^